# BigNumbersMultiplication

Multiplication/: CMakeLists.txt  main.cpp
Multiplication/Multiplicator/: multiplicator.cpp  multiplicator.h
Multiplication/Number/: number.cpp  number.h
Multiplication/Report/: Report.docx
Multiplication/School/: school.cpp  school.h
Multiplication/d_and_c/: d_and_c.cpp  d_and_c.h
Multiplication/data/: data.csv  dataK.csv  figure1.py  figure2.py  figure4.py  figure5.py  figure6.py
Multiplication/experiment/: experiment.cpp  experiment.h
Multiplication/karatsuba/: karatsuba.cpp  karatsuba.h
